feat: 업로드 이미지 저장소를 MinIO(S3 호환)로 전환
- FileService 를 로컬 디스크에서 MinIO putObject/getObject/copyObject 기반으로 재구현
- /uploads/{filename} 서빙을 ImageController 가 MinIO 스트리밍으로 대체 (WebMvcConfig 제거)
- 기존 URL 포맷(/uploads/<파일명>)과 DB 는 그대로, 객체 키 = 파일명 이라 DB 변경 불필요
- MinioConfig/StorageProperties 로 storage.minio.* 설정, 부팅 시 버킷 확인
- StorageMigrationRunner: 로컬 디렉터리 1회 마이그레이션(누락분만)
- 실 MinIO 대상 통합테스트 MinioStorageIT 추가(MINIO_IT env 로만 활성)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>